# faster-whisper-server

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  preload.py  transcribe.py
docker/: Dockerfile.cpu  Dockerfile.gpu
